Compile for java 8, 11, 17